--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(Project8)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES main.cpp Input.cpp Parse.h String.h BST.h ExpTree.h ExpTree.cpp)
+set(SOURCE_FILES main.cpp Input.cpp Parse.h String.h BST.h ExpTree.h ExpTree.cpp Project8.cpp Project8.h)
 add_executable(Project8 ${SOURCE_FILES} main.cpp)
